@@ -1,5 +1,10 @@
 2011-11-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* support/regression/tests/bug3440327.c:
+	  Regression test for bug #3440327.
+
+2011-11-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/SDCClabel.c:
 	  Optimize hidden jump-to-jump.
 
